--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ to use  mathematics to solve real problems elegantly. Reference books: </p>
   <tbody>
   <tr>
     <td width="442" height="91" align="left">
-      <p class="WordSection1">1. One paper accepted to NeurIPS 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of CVPR 2025 and ICML 2025! </p></td>
+      <p class="WordSection1">1. One paper accepted to NeurIPS 2024! Two papers accepted to IEEE TPAMI! I am invited to be a senior area chair of NeurIPS 2025, CVPR 2025 and ICML 2025! </p></td>
     <td width="180" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="181" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="172" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -618,7 +618,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">163. Yong Chen, Yuxiang Zhou, Zhe Sun, Qianchen Xia, Dell Zhang, and <u>Zhouchen Lin</u>, <em>BeST: Bi-Level Semantic Transformer for Video Hashing</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">162. Hanzhen Zhao, Pengyun Yue, Cong Fang, Di He, Liwei Wang, <u>Zhouchen Lin</u>, and Song-Chun Zhu, <em>CORE: Common Random Reconstruction for Distributed Optimization with Provable Lower Total Communication Costs</em>, submitted to J. Machine Learning Research.</span></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">161. Jianlong Wu, Zihan Li, Wei Sun, Jianhua Yin, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>ClusMatch: Improving Deep Clustering by
-  Unified Positive and Negative Pseudo-label Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
+  Unified Positive and Negative Pseudo-label Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, minor revision. </span></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">160. Xin Xu and <u>Zhouchen Lin</u>, <em>Learning Nonseparable Sparse Regularizers via Multivariate Activation Functions</em>, submitted to Neurocomputing. </span></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">159. Yibo Yang, Tongliang Liu, <u>Zhouchen Lin</u>, Bernard Ghanem, and Dacheng Tao, <em>ShadowNet for Data-Centric Quantum System Learning</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">158. Yibo Yang, Haobo Yuan, Xiangtai Li, JianlongWu, Lefei Zhang, <u>Zhouchen Lin</u>, Philip Torr, Dacheng Tao, and Bernard Ghanem, <em>Neural Collapse Terminus: A Unified Solution for Class Incremental Learning and Its Variants</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence, major revision. </span></p>
@@ -1197,17 +1197,18 @@ No. 1, pp. 119-127, 1998.</span>
  </span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">181. One paper submitted to ICCV 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">180. One paper submitted to COLT 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">179. 11 papers submitted to ICML 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">178. Two papers submitted to ACL ARR 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">177. Three papers submitted to KDD 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">176. One paper submitted to IJCAI 2025, survey track. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">175. One paper submitted to ICME 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">182. One paper submitted to ICCV 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">181. One paper submitted to COLT 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">180. 11 papers submitted to ICML 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">179. Two papers submitted to ACL ARR 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">178. Three papers submitted to KDD 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">177. One paper submitted to IJCAI 2025, survey track. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">176. One paper submitted to ICME 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">175. Haotong Yang, Qingyuan Zheng, Yunjian Gao, Yongkun Yang, Yangbo He, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>, and Muhan Zhang, <em>VACT: A Video Automatic Causal Testing System and a Benchmark</em>, ICLR 2025 Workshop on Spurious Correlation and Shortcut Learning: Foundations and Solutions.</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">174. Yikang Li, Yeqing Qiu, Yuxuan Chen, and <u>Zhouchen Lin</u>, <em>Affine Steerable Equivariant Layer for Canonicalization of Neural Networks</em>, ICLR 2025. [<a href="Publications/2025-ICLR-Affine.pdf">pdf</a>]</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">173. Shen Yan, Xingyan Bin, Sijun Zhang, Yisen Wang, and <u>Zhouchen Lin</u>, <em>TC-MoE: Augmenting Mixture of Experts with Ternary Expert Choice</em>, ICLR 2025. [<a href="Publications/2025-ICLR-TC-MoE.pdf">pdf</a>]</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">172. Haotong Yang, Yi Hu, Shijia Kang, <u>Zhouchen Lin</u>, Muhan Zhang, <em>Number Cookbook: Number Understanding of Language Models and How to Improve It</em>, ICLR 2025. [<a href="Publications/2025-ICLR-Number.pdf">pdf</a>]</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">171. Hanzhen Zhao, Xingyu Xie, Cong Fang, and <u>Zhouchen Lin</u>, <em>SEPARATE: A Simple Low-rank Projection for Gradient Compression in Modern Large-scale Model Training Process</em>, ICLR 2025. [<a href="Publications/2015-ICLR-SEPARATE.pdf">pdf</a>]</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">171. Hanzhen Zhao, Xingyu Xie, Cong Fang, and <u>Zhouchen Lin</u>, <em>SEPARATE: A Simple Low-rank Projection for Gradient Compression in Modern Large-scale Model Training Process</em>, ICLR 2025. [<a href="Publications/2025-ICLR-SEPARATE">pdf</a>]</p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">170. Yang Jin, Zhicheng Sun, Ningyuan Li, Kun Xu, Kun Xu, Hao Jiang, Nan Zhuang, Quzhe Huang, Yang Song, Yadong Mu*, and <u>Zhouchen Lin</u>*, <em>Pyramidal Flow Matching for Efficient Video Generative Modeling</em>, ICLR 2025. [<a href="Publications/2025-AAAI-Pyramidal.pdf">pdf</a>]</p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">169. Zhoutong Wu, Yimu Zhang, Cong Fang*, and <u>Zhouchen Lin</u>*, <em>Separation and Bias of Deep Equilibrium Models on Expressivity and Learning Dynamics</em>, NeurIPS 2024. [<a href="Publications/2024-NeurIPS-DEQ.pdf">pdf</a>]</p>
 <p>168. Xin Xu and <u>Zhouchen Lin</u>*, <em>MixCon: A Hybrid Architecture for Efficient and Adaptive Sequence Modeling</em>, ECAI 2024. [<a href="Publications/2024-ECAI-MixCon.pdf">pdf</a>][<a href="MixCon.zip">code</a>]</p>
@@ -2066,7 +2067,8 @@ Member of Pattern Recognition Professional Committee, China Association of Artif
 <p>35. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></p>
-<p>ICIG 2025 (<strong>Program Co-Chair</strong>), AAAI 2025 Workshop on Artificial Intelligence with Causal Techniques (<strong>Chair</strong>), ICCV 2025 (<strong>Lead Area Chair</strong>), CVPR 2025 (<strong><strong>Senior </strong>Area Chair</strong>), ICML 2025 (<strong>Senior Area Chair</strong>), ICLR 2025 (<strong>Area Chair</strong>), SigAI China Forum at TURC 2024 (<strong>General Chair</strong>), NeurIPS 
+<p>NeurIPS 
+2025 (<strong>Senior Area Chair</strong>), ICIG 2025 (<strong>Program Co-Chair</strong>), AAAI 2025 Workshop on Artificial Intelligence with Causal Techniques (<strong>Chair</strong>), ICCV 2025 (<strong>Senior Area Chair</strong>), CVPR 2025 (<strong><strong>Senior </strong>Area Chair</strong>), ICML 2025 (<strong>Senior Area Chair</strong>), ICLR 2025 (<strong>Area Chair</strong>), SigAI China Forum at TURC 2024 (<strong>General Chair</strong>), NeurIPS 
 2024 (<strong>Senior Area Chair</strong>), ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
 (<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), 第十九届中国图象图形学学会青年科学家会议（<strong>General Co-Chair）</strong>，NeurIPS 
 2023 (<strong>Senior Area Chair</strong>), ECAI 2023 (<strong>Area Chair</strong>), ICCV 2023 (<strong>Area Chair</strong>), ICLR 2023 (<strong>Area Chair</strong>), AAAI 2023, CVPR 2023 (<strong>Senior Area Chair</strong>), CVPR 2022 (<strong>Award Committee</strong>), NeurIPS 
@@ -2172,7 +2174,7 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>21. Zhengyang Shen (2020年度石青云院士优秀论文奖), Ph.D. in 2022. </p>
 <p>22. Feng Jiang, Qiuhao Wang, Zhiheng Kong, and Nan Ke, Master in 2022. </p>
 <p>23. Zenan Ling (now Assistant Professor at Huazhong University of Science and Technology), PostDoc in 2022. </p>
-<p>24. Xingyu Xie (<strong>Peking University  Outstanding Ph.D. Dissertation Award</strong>, 2019年度石青云院士优秀论文奖，<strong>CSIG 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>),  Mingjie Li (<strong>Peking University Excellent Graduate Student, CAA 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>), Yifei Wang (co-supervise, <strong>CAAI 2023 Outstanding Ph.D. Dissertation Award Honorable Mention</strong>) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
+<p>24. Xingyu Xie (<strong>2023 Peking University  Outstanding Ph.D. Dissertation Award</strong>, 2019年度石青云院士优秀论文奖，<strong>CSIG 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>),  Mingjie Li (<strong>Peking University Excellent Graduate Student, CAA 2024</strong> <strong>Outstanding Ph.D. Dissertation Award</strong>), Yifei Wang (co-supervise, <strong>CAAI 2023 Outstanding Ph.D. Dissertation Award Honorable Mention</strong>) and Qi Chen (co-supervise), Ph.D. in 2023. </p>
 <p>25. Dapeng Xu, Shihong Ding, Zhuping Gong, and Zongpeng Zhang (co-supervise), Master in 2023. </p>
 <p>26. Long Yang, Postdoc in 2024. </p>
 <p>27. Lingshen He and Qingyan Meng, Ph.D. in 2024.</p>
@@ -2413,7 +2415,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on Mar. 5, 2025. Number of visitors since March 1, 2010:     
+was last updated on Mar. 7 2025. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
