--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Vitae:</span></u><span lang="EN-US">   <o:p></o:p>
     <tr style="height: 34.5pt; mso-yfti-irow: 9; mso-yfti-lastrow: yes;">
       <td width="88" style="padding: 0.75pt; width: 65.65pt; height: 34.5pt;">
         <p class="TableNormal" style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto;"><i>Sept. 1989 - 
-          Aug. 1993:</i></p></td>
+          July. 1993:</i></p></td>
       <td width="94" style="padding: 0.75pt; width: 70.35pt; height: 34.5pt;">
         <p class="TableNormal" style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto;">Bachelor 
           Candidate</p></td>
@@ -1200,9 +1200,9 @@ No. 1, pp. 119-127, 1998.</span>
  </span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">185. One paper submitted to ICCV 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">184. One paper submitted to COLT 2025. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">183. Three papers submitted to KDD 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">185. 20 paper submitted to NeurIPS 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">184. One paper submitted to ICCV 2025. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">183. Four papers submitted to KDD 2025. </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">182. Hao Wang, Zhichao Chen, Haotian Wang, Yanchao Tan, Licheng Pan, Tianqiao Liu, Xu Chen, Haoxuan Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Unbiased Recommender Learning from Implicit Feedback via Progressive Proximal Transport</em>, ICML 2025.</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">181. Yang Chen, Long Yang, Yitao Liang, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Low-Dimension-to-High-Dimension Generalization and Its Implications for Length Generalization</em>, ICML 2025.</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">180. Lexiang Hu, Yisen Wang, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Incorporating Arbitrary Matrix Group Equivariance into KANs</em>, ICML 2025.</p>
@@ -1310,7 +1310,7 @@ ICCV 2019, oral. (acceptance rate 4.6%) [<a href="https://zhouchenlin.github.io/
 Shen, Xia Li, Jianlong Wu, Zhisheng Zhong, and <u>Zhouchen Lin</u>*, <em>R^2-Net: Recurrent and Recursive Network for Sparse-view CT Artifacts Removal</em>, 
 MICCAI 2019</span>. [<a href="https://zhouchenlin.github.io/Publications/2019-MICCAI-R2-Net.pdf">pdf</a>][<a href="R2-Net-code.zip">code</a>]</p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">93. Cong Fang, <u>Zhouchen Lin*</u>, and Tong Zhang, <em>Sharp Analysis 
-for Nonconvex SGD Escaping from Saddle Points</em>, COLT 2019, pp. 1192-1234. [<a href="https://arxiv.org/abs/1902.00247v1">pdf</a>]</p>
+for Nonconvex SGD Escaping from Saddle Points</em>, COLT 2019, pp. 1192-1234. [<a href="Publications/2019-COLT-Sharp.pdf">pdf</a>]</p>
 <p style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">92. Xingyu Xie, Jianlong Wu, 
 Zhisheng Zhong, Guangcan Liu*, and <u>Zhouchen Lin</u>*, <em>Differentiable 
 Linearized ADMM</em>, ICML 2019. [<a href="https://zhouchenlin.github.io/Publications/2019-ICML-D-LADMM.pdf">pdf+supplementary 
