--- a/index.html
+++ b/index.html
@@ -2122,25 +2122,26 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Awards:</u></b></strong></p>
-<p>1. 刘宏、刘梦源、李夏、徐勇、林宙辰、田春伟、丁润伟、李广朋、戴林蕙，多元视觉特征交互学习机制，2024年度广东省科学技术奖自然科学一等奖。</p>
-<p>2. 林宙辰、王奕森、吴建龙、夏树涛，非完备情况下的表示学习理论与方法，2024年度中国自动化学会科学技术奖自然科学一等奖。[Zhouchen Lin, Yisen Wang, Jianlong Wu, Shutao Xia, <strong>First Prize</strong> of the CAA Natural Science Award (2024), by the work &quot;Theories and Methods of Representation Learning under Incomplete Conditions&quot;.]</p>
-<p>3. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, <strong>First prize</strong> of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
-<p>4. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
-<p>5. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。[Risheng Liu, Miao Zhang, Zhouchen Lin, Xin Fan, Zhongxuan Luo, <strong>Second prize</strong> of the CSIG Natural Science Award (2023), by the work &quot;Theory and Method of Multi-domain Coordinated Visiual Computing for All-time Complex Environment Perception&quot;.]</p>
-<p>6. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。[Hong Liu, Mengyuan Liu, Xia Li, Zhouchen Lin, Runwei Ding, <strong>First prize</strong> of Shenzhen Natural Science Award (2023), by the work &quot;A Robot Vision Universal Feature Learning Mechanism Based on Multi-Trusted Architecture&quot;.] </p>
-<p>7. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
-<p>8. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
-<p>9. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, <strong>First prize</strong> of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
-<p>10. Distinguished Speaker of CCF (2020). </p>
-<p>11. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+<p>1. 林宙辰、王奕森、方聪、吴建龙、刘光灿、李欢、杨一博，资源受限下的机器学习理论与方法，第二届“祖冲之奖”————人工智能前沿创新奖突出成果奖。</p>
+<p>2. 刘宏、刘梦源、李夏、徐勇、林宙辰、田春伟、丁润伟、李广朋、戴林蕙，多元视觉特征交互学习机制，2024年度广东省科学技术奖自然科学一等奖。</p>
+<p>3. 林宙辰、王奕森、吴建龙、夏树涛，非完备情况下的表示学习理论与方法，2024年度中国自动化学会科学技术奖自然科学一等奖。[Zhouchen Lin, Yisen Wang, Jianlong Wu, Shutao Xia, <strong>First Prize</strong> of the CAA Natural Science Award (2024), by the work &quot;Theories and Methods of Representation Learning under Incomplete Conditions&quot;.]</p>
+<p>4. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, <strong>First prize</strong> of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
+<p>5. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
+<p>6. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。[Risheng Liu, Miao Zhang, Zhouchen Lin, Xin Fan, Zhongxuan Luo, <strong>Second prize</strong> of the CSIG Natural Science Award (2023), by the work &quot;Theory and Method of Multi-domain Coordinated Visiual Computing for All-time Complex Environment Perception&quot;.]</p>
+<p>7. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。[Hong Liu, Mengyuan Liu, Xia Li, Zhouchen Lin, Runwei Ding, <strong>First prize</strong> of Shenzhen Natural Science Award (2023), by the work &quot;A Robot Vision Universal Feature Learning Mechanism Based on Multi-Trusted Architecture&quot;.] </p>
+<p>8. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
+<p>9. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
+<p>10. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, <strong>First prize</strong> of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
+<p>11. Distinguished Speaker of CCF (2020). </p>
+<p>12. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
-<p>12. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>13.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
-<p>14. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>15. Okawa Research Grant (2016) </p>
-<p>16. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>13. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>14.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
+<p>15. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>16. Okawa Research Grant (2016) </p>
+<p>17. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>17. Microsoft SPOT Award (2007)  </p>
+<p>18. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Courses:</u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
@@ -2427,7 +2428,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on June 5, 2025. Number of visitors since March 1, 2010:     
+was last updated on June 27, 2025. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
